Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11774

lupdate's QtScript frontend doesn't support translator comments and adding meta-data

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.1
    • 4.6.0
    • Qt Script
    • None
    • 1c4e3cf9870df591c60dc7d59df2b98b8eb534b0

      The functionality described on the "Writing Source Code for Translation" page, sections "Translator Comments" and "Adding Meta-Data to Strings" (http://doc.qt.nokia.com/4.6/i18n-source-translation.html#translator-comments), is not supported when translating QtScript files.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kenthans Kent Hansen (Inactive)
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes